--- a/Django/item_tracker/tracker/templates/image_add.html
+++ b/Django/item_tracker/tracker/templates/image_add.html
@@ -8,7 +8,6 @@
 {% block contents %}
 <div class="container my-5">
     <div class="row justify-content-between my-4" id="checked" style="display: none;">
-        <!-- (x_min, y_min, x_max, y_max) = (<span id="box"></span>) -->
         <h5 class="col-10" style="text-align: center; margin-top: 0.5rem;">全てのアイテムが入るように、外枠を囲ってください。</h5>
         <button class="col-2 btn btn-primary my-auto" type="button" onclick="auto_fit();">画像読込</button>
     </div>
@@ -17,17 +16,12 @@
         <canvas id="canvas" style="display: none;"></canvas>
         <video id="movie" controls autoplay loop style="display: none;"></video>
         <img id="image" src="{{ image.url }}" style="display: none;"/>
-        <!-- <img id="img" src="{{ image.url }}" style="display: none;"/> -->
-        <!-- <span id="create" style="display: none;">{{ create }}</span> -->
     </div>
 
-
-    <div class="row w-50 mt-3 mb-5 mx-auto" id="control" style="display: none;">
+    <div class="row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
         <input class="btn-check" type="checkbox" id="check" disabled>
         <label class="btn btn-outline-primary" for="check" onclick="del_box();">外枠をリセット</label>
     </div>
-
-    <!-- <hr> -->
     
     <div class="row">
         <form method="POST" enctype='multipart/form-data'>
@@ -46,34 +40,27 @@
 
 
 {% block js %}
-<script>// キャンバスとコンテキストを取得
+<script>
+    // キャンバスとコンテキストを取得
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
-    // const previewCanvas = new HTMLCanvasElement(); // プレビュー用のキャンバス
-    const previewCanvas = document.createElement("canvas"); // プレビュー用のキャンバス
-    const previewCtx = previewCanvas.getContext("2d");
+
+    const preview = document.getElementById("preview"); // プレビューキャンバスの領域
+
     const image = document.getElementById("image");
     const movie = document.getElementById("movie");
+    const movie_get = document.getElementById("id_movie");
 
     const check = document.getElementById("check");
     const checked = document.getElementById("checked");
     const control = document.getElementById("control");
     let set = false;
-    // const box_in = document.getElementsByName("box");
-    const box = document.getElementById("box");
-    // const finish = document.getElementById("finish");
 
     const submit = document.getElementById("submit");
     submit.disabled = true;
 
-    // const box_list = document.getElementById("box_list");
-    // const create = document.getElementById("create").innerText;
-    const image_get = document.getElementById("id_image");
-    const movie_get = document.getElementById("id_movie");
-
     
-    const preview = document.getElementById("preview");
-    // const img = document.getElementById("img");
+
 
     // 描画状態を管理するフラグと座標を初期化
     let isDrawing = false;
@@ -82,16 +69,12 @@
     // バウンディングボックスの座標を初期化
     let x_min, x_max, y_min, y_max;
     let box_li = [0,0,0,0];
-    // for (let i = 0; i < set.length; i++) box_li[i] = 
     
     movie.autoplay = false;
     movie.muted = true;
 
+
     function auto_set_box() {
-        // let w = preview.getBoundingClientRect().width;
-        // let h = preview.getBoundingClientRect().height;
-        // let w = movie.videoWidth;
-        // let h = movie.videoHeight;
         let w = movie.videoWidth / canvas.width;
         let h = movie.videoHeight / canvas.height;
 
@@ -101,14 +84,10 @@
         document.getElementById(`id_box_y_max`).value = box_li[3] * h;
     };
     
-    // function captureFirstFrame(videoElement, canvasElement) {
+
     function captureFrame() {
-        // const canvas = canvasElement;
-        // let context = canvasElement.getContext('2d');
-        // drawFirstFrame(); // 動画の最初のフレームを描画
         videoElement.currentTime = 0;
         context.drawImage(videoElement, 0, 0, canvasElement.width, canvasElement.height);
-        // ctx.drawImage(image, 0, 0);
         return canvasElement.toDataURL('image/jpeg');
     }
     
@@ -118,181 +97,32 @@
         
         // キャンバスをクリアして画像を再描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        
-        // image.src = canvas.toDataURL('image/jpeg');
-        // movie.currentTime = 0;
-        // previewCtx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
-        // image.src = previewCanvas.toDataURL('image/jpeg');
-
-        // ctx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
-        // const previewCanvas = new HTMLCanvasElement(canvas); // プレビュー用のキャンバス
-        // previewCanvas.width = movie.videoWidth;
-        // previewCanvas.height = movie.videoHeight;
-        // const previewCtx = previewCanvas.getContext("2d");
-        // previewCtx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
-
         ctx.drawImage(image, 0, 0);
-        // ctx.drawImage(movie, 0, 0, canvas.width, canvas.height);
-        // ctx.drawImage(previewCanvas, 0, 0, canvas.width, canvas.height);
-        // ctx.drawImage(captureFirstFrame(movie, canvas), 0, 0, canvas.width, canvas.height);
     }
     
 
     movie_get.addEventListener('change', function() {
         movie.src = URL.createObjectURL(movie_get.files[0]);
         movie.onloadedmetadata = function() {
-            // canvas.width = movie.videoWidth;
-            // canvas.height = movie.videoHeight;
-            // canvas.width = canvas.getBoundingClientRect().width;
-            // canvas.height = canvas.getBoundingClientRect().height;
             canvas.width = preview.getBoundingClientRect().width;
             canvas.height = canvas.width * (movie.videoHeight / movie.videoWidth);
-            // canvas.height = preview.getBoundingClientRect().height * (movie.videoHeight/movie.videoWidth);
-            // canvas.style = "width: 100%; height: auto;";
             canvas.style = "width: 100%; height: auto;";
             checked.style = "margin: 0;";
-            // checked.style = "";
             control.style = "";
             
-            // captureFirstFrame(movie, canvas);
-            // image.src = captureFrame(movie, canvas);
-            // ctx.drawImage(image, 0, 0);
-            
             movie.currentTime = 0;
-
             
             image.width = canvas.width;
             image.height = canvas.height;
             ctx.drawImage(movie, 0, 0, canvas.width, canvas.height);
             image.src = canvas.toDataURL('image/jpeg');
             ctx.drawImage(image, 0, 0);
-            
-            
-            // drawFirstFrame(); // 動画の最初のフレームを描画
-            
-            // image.style = "width: 80px; height: 60px;";
         };
-        
-        
-
-        // image.width = previewCanvas.width;
-        // image.height = previewCanvas.height;
-        // previewCanvas.width = canvas.width;
-        // previewCanvas.height = canvas.height;
-        // previewCtx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
-        // image.src = previewCanvas.toDataURL('image/jpeg');
-        
-        // image.width = canvas.width;
-        // image.height = canvas.height;
-        // ctx.drawImage(movie, 0, 0, canvas.width, canvas.height);
-        // image.src = canvas.toDataURL('image/jpeg');
-
-        // ctx.drawImage(image, 0, 0);
-
-        // console.log(canvas);
-
-        // let reader = new FileReader();
-        // reader.readAsDataURL(image_get.files[0]);
-        // reader.onloadend = function(){ image.src = this.result; }
-
-        // キャンバスのサイズを画像のサイズに設定
-        // canvas.width = image.width;
-        // canvas.height = image.height;
-
-        // canvas.style = "";
-        // checked.style = "margin: 0 16px;";
-        // control.style = "";
-
-        // set = true;
     });
-
-    // // 画像の読み込みが完了したらキャンバスに描画
-    // previewCanvas.onload = () => {
-    //     // canvas.width = image.width;
-    //     // canvas.height = image.height;
-    //     // movie.autoplay = false;
-    //     // movie.muted = true;
-    //     // movie.currentTime = 0;
-    //     image.width = canvas.width;
-    //     image.height = canvas.height;
-    //     ctx.drawImage(movie, 0, 0, canvas.width, canvas.height);
-    //     image.src = canvas.toDataURL('image/jpeg');
-    //     // drawFirstFrame(); // 動画の最初のフレームを描画
-    //     ctx.drawImage(image, 0, 0);
-        
-    //     console.log("ttttt");
-    // };
-
-
-    // // 画像の読み込みが完了したらキャンバスに描画
-    // image.onload = () => {
-    //     // canvas.width = preview.getBoundingClientRect().width;
-    //     // canvas.height = canvas.width * (movie.videoHeight / movie.videoWidth);
-    //     image.width = preview.getBoundingClientRect().width;
-    //     image.height = image.width * (movie.videoHeight / movie.videoWidth);
-    //     if (canvas.width != preview.getBoundingClientRect().width) {
-    //         // movie.currentTime = 0;
-    //         // ctx.drawImage(movie, 0, 0, image.width, image.height);
-    //         // image.src = canvas.toDataURL('image/jpeg');
-    //         // ctx.clearRect(0, 0, canvas.width, canvas.height);
-    //         // set = true;
-    //         console.log("tttt");
-    //         // previewCanvas.width = preview.getBoundingClientRect().width;
-    //         // previewCanvas.height = previewCtx.width * (movie.videoHeight / movie.videoWidth);
-
-    //         // previewCanvas.width = image.width;
-    //         // previewCanvas.height = image.height;
-    //         // previewCtx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
-    //         // image.src = previewCanvas.toDataURL('image/jpeg');
-    //         // image.width = previewCanvas.width;
-    //         // image.height = previewCanvas.height;
-            
-    //         // image.width = canvas.width;
-    //         // image.height = canvas.height;
-    //         canvas.width = image.width;
-    //         canvas.height = image.height;
-    //         // ctx.drawImage(movie, 0, 0, image.width, image.height);
-    //         ctx.drawImage(movie, 0, 0, canvas.width, canvas.height);
-    //         image.src = canvas.toDataURL('image/jpeg');
-    //     }
-    //     // canvas.width = image.width;
-    //     // canvas.height = image.height;
-    //     // // drawFirstFrame(); // 動画の最初のフレームを描画
-        
-    //     // movie.currentTime = 0;
-    //     // previewCtx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
-    //     // image.src = previewCanvas.toDataURL('image/jpeg');
-        
-    //     // movie.currentTime = 1;
-    //     // image.src = canvas.toDataURL('image/jpeg');
-    //     // ctx.clearRect(0, 0, canvas.width, canvas.height);
-    //     ctx.drawImage(image, 0, 0);
-    //     console.log("ttt");
-    // };
-
     
-    function auto_fit() {
-        // movie.currentTime = 0;
-        // ctx.drawImage(movie, 0, 0, image.width, image.height);
-        // image.src = canvas.toDataURL('image/jpeg');
-        // ctx.clearRect(0, 0, canvas.width, canvas.height);
-        // set = true;
-        console.log("tttt");
-        // previewCanvas.width = preview.getBoundingClientRect().width;
-        // previewCanvas.height = previewCtx.width * (movie.videoHeight / movie.videoWidth);
 
-        // previewCanvas.width = image.width;
-        // previewCanvas.height = image.height;
-        // previewCtx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
-        // image.src = previewCanvas.toDataURL('image/jpeg');
-        // image.width = previewCanvas.width;
-        // image.height = previewCanvas.height;
-        
-        // canvas.width = image.width;
-        // canvas.height = image.height;
-        // image.width = canvas.width;
-        // image.height = canvas.height;
-        // ctx.drawImage(movie, 0, 0, image.width, image.height);
+    function auto_fit() {
+        console.log("tttt");
         if (canvas.width != preview.getBoundingClientRect().width) {
             set = false;
 
@@ -322,7 +152,6 @@
     function draw_box(order) {
         drawFirstFrame(); // 動画の最初のフレームを描画
 
-        // console.log(order);
         ctx.strokeStyle = "blue"; // 青い線で描画
         
         if (order) ctx.lineWidth = 2;
@@ -336,22 +165,19 @@
         );
     };
 
+
     // マウスダウンイベントのリスナーを追加
     canvas.addEventListener("mousedown", (e) => {
-        // movie.currentTime = 0;
-        // previewCtx.drawImage(movie, 0, 0, previewCanvas.width, previewCanvas.height);
         auto_fit();
-        // image.src = previewCanvas.toDataURL('image/jpeg');
-        // ctx.drawImage(image, 0, 0);
 
         isDrawing = true;
         startX = e.clientX - canvas.getBoundingClientRect().left;
         startY = e.clientY - canvas.getBoundingClientRect().top;
     });
 
+
     // マウスムーブイベントのリスナーを追加
     canvas.addEventListener("mousemove", (e) => {
-        // movie.currentTime = 0;
         if (!isDrawing) return;
 
         const x = e.clientX - canvas.getBoundingClientRect().left;
@@ -368,26 +194,9 @@
         ctx.strokeRect(startX, startY, width, height);
     });
 
-    // function submit_check(fin) {
-    //     if (fin) submit.disabled = false;
-    //     else submit.disabled = true;
-    //     // if (finish.checked) submit.disabled = true;
-    //     // else submit.disabled = false;
-    // }
-
-    // function finish_check(index=-1) {
-    //     finish.checked = true;
-    //     for (let i = 0; i < set.length; i++) {
-    //         if (i != index && !check[i].checked) {
-    //             finish.checked = false;
-    //         }
-    //     }
-    //     submit_check(finish.checked);
-    // }
 
     // マウスアップイベントのリスナーを追加
     canvas.addEventListener("mouseup", () => {
-        // movie.currentTime = 0;
         isDrawing = false;
 
         // 描画した矩形の座標を表示
@@ -405,10 +214,6 @@
             y_max -= height;
         }
 
-        // キャンバスをクリアして画像を再描画
-        // ctx.clearRect(0, 0, canvas.width, canvas.height);
-        // drawFirstFrame(); // 動画の最初のフレームを描画
-        // isDrawing = true;
         box_li = [
             x_min,
             y_min,
@@ -418,59 +223,25 @@
         console.log(box_li);
 
         auto_set_box();
-        // document.getElementById(`id_box_x_min`).value = x_min;
-        // document.getElementById(`id_box_y_min`).value = y_min;
-        // document.getElementById(`id_box_x_max`).value = x_max;
-        // document.getElementById(`id_box_y_max`).value = y_max;
 
         check.checked = true;
         check.disabled = false;
         submit.disabled = false;
 
         draw_box(true);
-        
-        // finish_check();
-
-        
-
-        box.innerHTML
-            = x_min.toFixed() + "px, "
-            + y_min.toFixed() + "px, "
-            + x_max.toFixed() + "px, "
-            + y_max.toFixed() + "px";
     });
 
     // マウスアウトイベントのリスナーを追加
     canvas.addEventListener("mouseout", () => {
-        // movie.currentTime = 0;
         isDrawing = false;
     });
 
     // 選択したバウンディングボックスを強調して描画
     function out_box() {
-
-        // キャンバスをクリアして画像を再描画
-        // ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawFirstFrame(); // 動画の最初のフレームを描画
         for (let i = 0; i < set.length; i++) {
             if (set[i].checked) draw_box(i); // バウンディングボックスの描画
         }
-    };
-
-    // 選択したバウンディングボックスの座標を追加
-    function set_box() {
-        for (let i = 0; i < set.length; i++) {
-            if (set[i].checked) {
-                box_li[i] = [
-                    x_min.toFixed(),
-                    y_min.toFixed(),
-                    x_max.toFixed(),
-                    y_max.toFixed()
-                ];
-                console.log(box_li[i]);
-            }
-        }
-        out_box();
     };
 
     // 選択したバウンディングボックスを削除
@@ -485,7 +256,6 @@
         check.disabled = true;
         submit.disabled = true;
 
-        // ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawFirstFrame(); // 動画の最初のフレームを描画
     };
     
