--- a/Django_Docker/toolkeeper_app/templates/history_list2.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list2.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}履歴一覧 | ToolKeeper{% endblock %}
+{% block title %}異常な履歴 | ToolKeeper{% endblock %}
 
 {% block active_asset_list %}active{% endblock %}
 
@@ -8,7 +8,7 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-3">
         <div class="row row-cols-1 row-cols-md-2 justify-content-center justify-content-md-between d-flex mb-4">
-            <h2 class="col w-auto mb-4 my-md-auto">異常な履歴一覧</h2>
+            <h2 class="col w-auto mb-4 my-md-auto">異常な履歴</h2>
             <div class="col row justify-content-center w-auto mx-auto mx-md-0 ms-md-auto">
                 <button class="col-auto learn-more my-2">
                     <span class="circle" aria-hidden="true">
@@ -37,7 +37,7 @@
         {% endif %}
 
         {% if zero_result_class_history %}
-        <h5 class="text-center text-warning">※以下の管理項目に異常があります※</h5>
+        <h4 class="text-center mb-4 py-2">※以下の管理項目に異常がありました※</h4>
             <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
                 
                 <!-- 「無し（0）」の result_class を持つ履歴を表示 -->
@@ -61,15 +61,19 @@
                                         <br> -->
                                         ユーザー：{{ history.user }}
                                         <br>
-                                        <hr>
-                                        <div style="overflow-x: auto; overflow-y: hidden; white-space: nowrap;">
-                                            {% for result in history.result_set.all %}
-                                                {% if result.result_class != 9 and result.result_class != 1 %}
-                                                    {% if result.result_class == 0 %}
-                                                        <strong><h6 style="display: inline;"><font color="#ff6347">{{ result.item.item_name }}</font>｜</h6></strong>
+
+                                        <div class="px-4">
+                                            <hr>
+
+                                            <div class="text-nowrap pb-2" style="overflow: auto;">
+                                                {% for result in history.result_set.all %}
+                                                    {% if result.result_class != 9 and result.result_class != 1 %}
+                                                        {% if result.result_class == 0 %}
+                                                            <strong><h6 style="display: inline;"><font color="#ff6347">{{ result.item.item_name }}</font>｜</h6></strong>
+                                                        {% endif %}
                                                     {% endif %}
-                                                {% endif %}
-                                            {% endfor %}
+                                                {% endfor %}
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
